Налажена сборка css,js вендоров и ЛивРелоад через плагин BrowserSync

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,40 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/vendor.min.css">
+	<link rel="stylesheet" href="css/custome.css">
 </head>
 <body>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt ullam doloribus, voluptas nisi excepturi nemo perspiciatis dolores quibusdam consectetur, optio quidem quam.</p>
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<h1>Шаблон</h1>
+			<ul>
+				<li>
+					<p>Сбор всех вендоров css через @import в файле app/sass/vendor.sass</p>
+				</li>
+				<li>
+					<p>Сбор всех JS вендоров, конкатенация, минификация</p>
+				</li>
+				<li>
+					<p>ЛивРелоад через плагин BrowserSync</p>
+				</li>
+				<li>
+					<p></p>
+				</li>
+				<li>
+					<p></p>
+				</li>
+				<li>
+					<p></p>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+
+<script src="js/vendor.min.js"></script>
+<script src="js/custome.js"></script>
+
 </body>
 </html>
